--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,18 @@
+:root {
+  --bg: #333;
+  --text-secondary: rgb(226, 77, 122);
+  --text-primary: #eee;
+  --divider: #585858;
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-color: var(--bg);
+  color: var(--text-primary);
 }
 
 a {
@@ -13,4 +22,17 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+::-webkit-scrollbar {
+  width: 0.6rem;
+}
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.6);
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: var(--text-secondary);
+  border-radius: 50px;
 }
